# Nexo

./: CLAUDE.md  Cargo.toml  biome.json  cli-deps.json  package.json  pnpm-lock.yaml  start-nexo.bat
.github/workflows/: ci.yml  release.yml
app/: index.html  package.json  vite.config.ts
app/houston-tauri/: Cargo.toml
app/houston-tauri/src/: lib.rs  state.rs
app/public/: compat-gate.js
app/src/: App.tsx  main.tsx  vite-env.d.ts
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/src/: auth.rs  dmg_guard.rs  engine_supervisor.rs  lib.rs  notification.rs  oauth_loopback.rs  window_focus.rs
app/src/agents/: catalog-labels.ts
app/tests/: archived-layout.test.ts  auth-callback.test.ts  auth-errors.test.ts  auto-continue-message.test.ts  board-navigate.test.ts  card-unification.test.ts  catalog-labels.test.ts  chat-effective-provider.test.ts  composio-already-connected.test.ts  engine-call-policy.test.ts  integrations-catalog.test.ts  integrations-connect-poll.test.ts  integrations-grants.test.ts  locale.test.ts  lunaria-intro-state.test.ts  missing-skill.test.ts  notification-nav.test.ts  org-roles.test.ts  provider-auth-feed.test.ts  routines-tab-model.test.ts  sentry-transport.test.ts  soul-ritual-scoring.test.ts  startup-analytics.test.ts  update-details.test.ts
docs/: axie-features.md
docs/manual/: 01-arquitectura.md  02-soul.md  03-memoria.md  04-ritual.md  05-rutinas-dream-judge.md  06-skills-contratos.md  07-lunaria-ui.md  08-flujo-arranque.md  09-desarrollo.md  README.md
engine/houston-composio/: Cargo.toml
engine/houston-engine-core/: Cargo.toml
engine/houston-engine-server/: Cargo.toml
engine/houston-integrations/: Cargo.toml
engine/houston-integrations/src/: error.rs  lib.rs
engine/houston-integrations/tests/: trait_object.rs
engine/houston-merge/: Cargo.toml
engine/houston-merge/src/: auth.rs  catalog.rs  guidance.rs  lib.rs  mcp.rs  provider.rs
engine/houston-skill-inspector/: Cargo.toml
engine/houston-skill-inspector/src/: lib.rs
engine/houston-skill-inspector/tests/fixtures/: clean.json  risky.json
engine/houston-skills/: Cargo.toml
engine/houston-skills/src/: lib.rs  remote.rs  scan.rs
engine/houston-terminal-manager/: Cargo.toml
examples/smartbooks/: tsconfig.json
knowledge-base/: agent-manifest.md  architecture.md  cli-bundling.md  engine-protocol.md  integrations-providers.md  platform-matrix.md  production-infra.md  skill-inspector.md  skills.md
scripts/: check-boundaries.mjs  event-qr.sh  fetch-cli-deps.sh
selfhost/: Dockerfile  README.md  docker-compose.yml
supabase/: config.toml
ui/agent/: package.json
ui/agent-schemas/: package.json
ui/board/: package.json
ui/chat/: package.json
ui/core/: package.json
ui/engine-client/: package.json
ui/events/: package.json
ui/layout/: package.json
ui/review/: package.json
ui/routines/: package.json
ui/skills/: package.json
website/: og-image-source.html
website/src/: index.html  llms.txt  robots.txt  sitemap.xml
(+422 files in other folders)
