[package]
name = "houston-integrations"
version = "0.4.12"
edition = "2021"
description = "Provider-agnostic integrations interface — abstracts Composio, Merge, and future providers behind one trait so agents/UI consume them identically"
license = "MIT"
repository = "https://github.com/gethouston/houston"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = "2"

[dev-dependencies]
houston-composio = { workspace = true }
houston-merge = { workspace = true }
