[package]
name = "houston-merge"
version = "0.4.12"
edition = "2021"
description = "Merge Agent Handler integrations provider — OAuth 2.0 + PKCE + dynamic client registration against ah-api.merge.dev, no bundled CLI"
license = "MIT"
repository = "https://github.com/gethouston/houston"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
url = "2"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
once_cell = "1"
thiserror = "2"
houston-integrations = { workspace = true }
