[package]
name = "houston-skills"
version = "0.4.24"
edition = "2021"
description = "Hermes-style self-improving skills for AI agents"
license = "MIT"

[features]
default = []
# `remote` covers all network + subprocess work: marketplace install AND
# the SkillSpector security scan (which shells out to the bundled scanner
# and writes the SKILL.md to a temp dir).
remote = ["reqwest", "tokio", "dep:tempfile", "dep:houston-skill-inspector"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
reqwest = { version = "0.12", features = ["json"], optional = true }
tokio = { version = "1", features = ["sync", "time"], optional = true }
tempfile = { version = "3", optional = true }
houston-skill-inspector = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
